syntax = "proto3";


package proto;


message CreateMessageRequest {
  bytes Data = 1;
}

message CreateMessageReply {
  string MsgID = 1;
  int32 MsgSeqID = 2;
}

message EmptyRequest {}

message EmptyReply {}


service MessageService {
  rpc CreateMessage (CreateMessageRequest) returns (CreateMessageReply) {}
}